<resources>
    <string name="app_name">SightRemote</string>
    <string name="welcome">Welcome</string>
    <string name="in_sightremote">in SightRemote</string>
    <string name="end_user_license_agreement">End user license agreement</string>
    <string name="eula" translatable="false">This experimental software is provided without warranty of any kind, so you use it completely at your own risk!\nRemote controlling an Insight insulin delivery pump with this software will only work if you have paired it with your phone.\nYou must consult your doctor before making any medical decision or action based on this or with this software. Always follow the instructions provided by your equipment manufacturer and medical professionals.\nThis is open-source software provided free of charge. Before using the software you are free to inspect the code for bugs. The source code is available at: https://github.com/TebbeUbben/SightRemote.\nThis application collects anonymised statistics and error reports and sends them to the developers. Everything else remains in your phone/tablet for maximum privacy protection.\nThere is an interface for third party applications. Applications need your approval before they are able to use it. Consider that these applications might send collected data elsewhere, so check with their respective privacy policies for more details.\nBy accepting this end user license agreement you agree you are legally able to do so and are willing to accept all responsibility for what could happen and that you understand there are no guarantees that using this application is safe or beneficial or that it will be compatible with your device.\nIf you are 18 years old and agree to these terms, then please indicate below:</string>
    <string name="proceed">Proceed</string>
    <string name="agree">I agree</string>
    <string name="pairing_mode">Pairing mode</string>
    <string name="pairing_mode_tutorial">First your pump must be paired with this device. Put your device into pairing mode to do that. Settings -> Communication -> Add device.</string>
    <string name="progress">Progress</string>
    <string name="setup_complete">Setup complete</string>
    <string name="setup_complete_congratulations">Congratulations, you successfully paired your pump with this device!</string>
    <string name="close_setup_wizard">Close setup wizard</string>
    <string name="connect">Connect</string>
    <string name="exchange_keys">Exchange keys</string>
    <string name="confirm_connection">Confirm connection on pump</string>
    <string name="complete_setup">Complete setup</string>
    <string name="connection_declined">The pairing was declined on the pump.</string>
    <string name="error">Error: %1$s</string>
    <string name="accept_terms">You must accept the terms first.</string>
    <string name="status">Status</string>
    <string name="started">Started</string>
    <string name="stopped">Stopped</string>
    <string name="paused">Paused</string>
    <string name="cartridge">Cartridge</string>
    <string name="battery">Battery</string>
    <string name="temporary_basalrate">Temporary basalrate</string>
    <string name="standard_bolus">Standard bolus</string>
    <string name="extended_bolus">Extended bolus</string>
    <string name="multiwave_bolus">Multiwave bolus</string>
    <string name="connecting">Connecting…</string>
    <string name="basal_amount_formatter"><![CDATA[%1$s: <b>%2$s</b>]]></string>
    <string name="tbr_text">%1$d%% for %2$s h / %3$s h</string>
    <string name="extended_bolus_text">%1$.2fU / %2$.2fU in %3$s h</string>
    <string name="normal_bolus_text">%1$.2fU / %2$.2fU</string>
    <string name="loading_points">Loading…</string>
    <string name="retry">Retry</string>
    <string name="open_navigation">Open navigation</string>
    <string name="close_navigation">Close navigation</string>
    <string name="deliver">Deliver</string>
    <string name="pump_not_started">Pump is not running.</string>
    <string name="decimal_delimitter">.</string>
    <string name="set_immediate_amount">Set immediate amount:</string>
    <string name="set_delayed_amount">Set delayed amount:</string>
    <string name="set_duration">Set duration:</string>
    <string name="bolus_type_not_available">Bolus type no available.</string>
    <string name="standard_bolus_confirmation"><![CDATA[Are you sure you want to deliver <b>%1$s?</b>]]></string>
    <string name="extended_bolus_confirmation"><![CDATA[Are you sure you want to deliver <b>%1$s? in %2$s hours</b>?]]></string>
    <string name="multiwave_bolus_confirmation"><![CDATA[Are you sure you want to deliver <b>%1$s?</b> immediately and <b>%2$s in %3$s hours</b>?]]></string>
    <string name="tbr_confirmation"><![CDATA[Are you sure you want to run your basal rate at <b>%1$d%% for %2$s hours</b>?]]></string>
    <string name="stop_pump_confirmation"><![CDATA[Are you sure you want to <b>stop</b> your pump?]]></string>
    <string name="start_pump_confirmation"><![CDATA[Are you sure you want to <b>start</b> your pump?]]></string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="stop_pump">Stop pump</string>
    <string name="start_pump">Start pump</string>
    <string name="set_percentage">Set percentage:</string>
    <string name="set_tbr">Set TBR</string>
    <string name="bolus">Bolus</string>
    <string name="basal_rate">Basal rate</string>
    <string name="bluetooth_not_found">Your device has no bluetooth module.</string>
    <string name="confirmation">Confirmation</string>
    <string name="enter_password">Enter password</string>
    <string name="delete_pairing">Delete pairing</string>
    <string name="delete_pairing_confirmation"><![CDATA[Are you sure you want to <b>delete the pairing</b> to your pump?]]></string>
    <string name="okay">Okay</string>
    <string name="profiles">Profiles</string>
    <string name="default_br_name">Basal Profile %1$d</string>
    <string name="change_br_profile_confirmation"><![CDATA[Are you sure you want to <b>change the active basal profile</b>?]]></string>
    <string name="edit_br_profile_confirmation"><![CDATA[Are you sure you want to <b>edit this basal profile</b>?]]></string>
    <string name="history_immediate_amount"><![CDATA[Immediate: <b>%1$s</b>]]></string>
    <string name="history_extended_amount"><![CDATA[Extended: <b>%1$s in %2$s hours</b>]]></string>
    <string name="history_bolus"><![CDATA[Bolus: <b>%1$s</b>]]></string>
    <string name="history_basal"><![CDATA[Basal: <b>%1$s</b>]]></string>
    <string name="history_total"><![CDATA[Total: <b>%1$s</b>]]></string>
    <string name="history">History</string>
    <string name="bolus_data">Bolus data</string>
    <string name="history_tbr_amount">%1$d%% for %2$s hours</string>
    <string name="tbr_data">TBR data</string>
    <string name="latest_bolus_standard"><![CDATA[%1$s: <b>%2$s</b>]]></string>
    <string name="latest_bolus_extended"><![CDATA[%1$s: <b>%2$s for %3$s</b>]]></string>
    <string name="latest_bolus_multiwave"><![CDATA[%1$s: <b>%2$s, %3$s for %4$s</b>]]></string>
    <string name="background_sync">Background Sync</string>
    <string name="please_enter_activation_password">Please enter the Insulin service activation password:</string>
    <string name="no">No</string>
    <string name="safety_warning">Safety Warning!</string>
    <string name="safety_warning_text1">Activating the Insulin service allows this app to deliver or adjust insulin delivery on the pump!  If the pump is ever going to be connected to a person then this activation must only be performed by a medical professional responsible for their care.</string>
    <string name="connected_to_a_person">Connected to a person</string>
    <string name="never_connected_to_a_person">Never connected to a person</string>
    <string name="are_you_a_qualified_medical_professional">Are you a qualified medical professional responsible for the care of the person who\'s insulin pump this application is paired with?</string>
    <string name="yes_i_am_a_medical_professional">Yes, I am a qualified medical professional responsible for their care</string>
    <string name="are_you_absolutely_sure_activate">Are you absolutely sure you wish to activate the Insulin service and that you fully understand what this does?</string>
    <string name="br_block_formatter">%1$s - %2$s</string>
    <string name="br_end_time">End time:</string>
    <string name="br_amount">Amount:</string>
    <string name="edit_block">Edit block</string>
    <string name="empty">Empty</string>
    <string name="minimum_of">Minimum of %1$s</string>
    <string name="maximum_of">Maximum of %1$s</string>
    <string name="maximum_of_two_decimal_places">Maximum of two decimal places</string>
    <string name="done">Done</string>
    <string name="edit_name">Edit name</string>
    <string name="leave_empty_for_default_value">Leave empty for default value</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="another_application_is_requesting_access_to_the_pump">Another application is requesting access to the pump!</string>
    <string name="pump_alert">Pump alert</string>
    <string name="daily_total">Daily total</string>
    <string name="total">Total</string>
    <string name="active_basal_rate">Active basal rate</string>
    <string name="latest_bolus">Latest bolus</string>
    <string name="setup">Setup</string>
    <string name="switch_spacer" translatable="false">"   "</string>
    <string name="allow_standard_boluses">Allow Standard Boluses</string>
    <string name="allow_extended_boluses">Allow Extended Boluses</string>
    <string name="firewall_options">Firewall Options</string>
    <string name="alarm_tone">Alarm tone</string>
    <string name="synchronize_pump_data_automatically_in_the_background">Synchronize pump data automatically in the background.</string>
    <string name="restrict_the_apps_functionality">Restrict the app\'s functionality.</string>
    <string name="enter_the_password_required_for_remote_controlling_the_pump">Enter the password required for remote controlling the pump.</string>
    <string name="delete_the_pairing_with_your_pump">Delete the pairing with your pump.</string>
    <string name="select_the_alarm_tone_used_for_pump_alerts">Select the alarm tone used for pump alerts.</string>
    <string name="confirmation_challenges">Confirmation challenges</string>
    <string name="avoid_inadvertent_bolus_deliveries">Avoid inadvertent bolus deliveries.</string>
    <string name="use_fingerprint">Use fingerprint</string>
    <string name="use_your_fingerprint_to_confirm_actions">Use your fingerprint to confirm actions.</string>
    <string name="use_pin">Use PIN</string>
    <string name="use_a_pin_instead_of_a_challenge">Use a pin instead of a challenge.</string>
    <string name="change_pin">Change PIN</string>
    <string name="change_the_pin_used_for_confirmation">Change the PIN used for confirmation.</string>
    <string name="or_press_the_buttons_in_the_following_order"><![CDATA[Or press the buttons in the following order: <b>%1$d-%2$d-%3$d-%4$d</b>]]></string>
    <string name="use_your_fingerprint_for_confirmation">Use your fingerprint for confirmation.</string>
    <string name="enter_your_old_pin">Enter your old PIN:</string>
    <string name="enter_your_new_pin">Enter your new PIN:</string>
    <string name="enter_your_new_pin_a_second_time">Enter your new PIN a second time:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="connection">Connection</string>
    <string name="automatically_adjust_pump_time">Automatically adjust pump time</string>
    <string name="automatically_adjust_the_pumps_time_if_its_inaccurate">Automatically adjust the pump\'s time if it\'s inaccurate</string>
</resources>