<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/status_nav_stop"
        android:title="@string/stop_pump"
        android:icon="@drawable/ic_stop"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/status_nav_start"
        android:title="@string/start_pump"
        android:icon="@drawable/ic_start"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/status_nav_background_sync"
        android:checkable="true"
        android:onClick="backgroundSyncCheck"
        android:title="@string/background_sync"
        app:showAsAction="never" />
    <item android:id="@+id/status_nav_delete_pairing"
        android:title="@string/delete_pairing"
        app:showAsAction="never" />
    <item android:id="@+id/status_nav_choose_alarm_tone"
        android:title="@string/choose_alarm_tone"
        app:showAsAction="never" />
    <item android:id="@+id/status_nav_firewall"
        android:title="@string/firewall_options"
        app:showAsAction="never" />
    <item android:id="@+id/status_nav_enter_password"
        android:title="@string/enter_password"
        app:showAsAction="never" />
</menu>